--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -20,46 +20,38 @@
         - title: Description 3.
           contents:
             - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
+            - Sub-description 2.-->
+    - title: Master Thesis in Information Engineering
+      institution: University of Modena and Reggio Emilia, Italy
+      year: 2000
+      <!--description:
         - Description 1.
         - Description 2.-->
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
+    - title: Full Professor in Information Engineering
+      institution: University of Modena and Reggio Emilia, Italy
+      year: 2022 - 
+      <!--description:
         - Description 1.
         - Description 2.
         - title: Description 3.
           contents:
             - Sub-description 1.
-            - Sub-description 2.
+            - Sub-description 2.-->
     - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
+      institution: University of Rijeka, HR
       year: 1933
-      description:
-        - Description 1.
-        - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Associate Professor in Information Engineering
+      institution: University of Modena and Reggio Emilia, Italy
+      year: 2015 - 2022
+    - title: Assistant Professor in Information Engineering
+      institution: University of Modena and Reggio Emilia, Italy
+      year: 2005 - 2015
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
 - title: Open Source Projects
   type: time_table
