--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -53,14 +53,14 @@
       year: 2005 - 2015
 
 
-- title: Open Source Projects
+<!-- - title: Open Source Projects
   type: time_table
   contents:
     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
       year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.-->
 
-- title: Honors and Awards
+<!-- - title: Honors and Awards
   type: time_table
   contents:
     - year: 1921
@@ -69,21 +69,27 @@
         - Matteucci Medal
     - year: 2029
       items: 
-        - Max Planck Medal
+        - Max Planck Medal-->
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Scalable Data Management and Integration
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Machine Learning and Deep learning techniques for Entity Resolution
+        - Explaining Entity Integration
+        - Application of NLP techniques on structured data
+        - Discovering and Summarizing the content of structured data
+    - title:  Data mining and analytics on big data
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
+        - Anomaly and Novelty Detection and explanation on time series
+    - title: Keyword search on structured data
+      items:
+        - Techniques for searching keywords in relational multi-table database
+    - title: Semantic web
+      items:
+        - Techniques for ontology alignment and integration
+<!-- - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc. -->
