--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,4 +1,12 @@
 github_users:
   - softlab-unimore
 
-
+github_repos:
+  - alshedivat/al-folio
+  - twbs/bootstrap
+  - jekyll/jekyll
+  - jquery/jquery
+  - FortAwesome/Font-Awesome
+  - jpswalsh/academicons
+  - mathjax/MathJax
+ 
