--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,13 +1,3 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - softlab-unimore
 
-github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
- 
