--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -34,7 +34,7 @@
      - title: Rector's Delegate to the ICT
       institution: University of Modena and Reggio Emilia, Italy
       year: Jan 2024 - 
-    - title: President of the bachelor and master’s degree course councils in computer engineering at the Department of Engineering “Enzo Ferrari”.
+    - title: President of the bachelor and master’s degree course councils in computer engineering at the Department of Engineering Enzo Ferrari.
       institution: University of Modena and Reggio Emilia, Italy
       year: Nov 2022 - 
     - title: Full Professor in Information Engineering
