--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -33,9 +33,11 @@
   contents:
      - title: Rector's Delegate to the ICT
       institution: University of Modena and Reggio Emilia, Italy
-      year: Jan 2024 - 
-
-    - title: Full Professor in Information Engineering
+      year: Jan 2024 - now
+    - title: President of the bachelor and master's degree course councils in computer engineering at the Department of Engineering 'Enzo Ferrari'.
+      institution: University of Modena and Reggio Emilia, Italy
+      year: Nov 2022 -  noew    
+      - title: Full Professor in Information Engineering
       institution: University of Modena and Reggio Emilia, Italy
       year: 2022 - 
       <!--description:
