--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -31,12 +31,10 @@
 - title: Experience
   type: time_table
   contents:
-     - title: Rector's Delegate to the ICT
+
+    - title: President of the bachelor and master degree course councils in computer engineering at the Department of Engineering Enzo Ferrari.
       institution: University of Modena and Reggio Emilia, Italy
-      year: Jan 2024 - now
-    - title: President of the bachelor and master's degree course councils in computer engineering at the Department of Engineering 'Enzo Ferrari'.
-      institution: University of Modena and Reggio Emilia, Italy
-      year: Nov 2022 -  noew    
+      year: Nov 2022 -  now    
       - title: Full Professor in Information Engineering
       institution: University of Modena and Reggio Emilia, Italy
       year: 2022 - 
