--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -41,6 +41,16 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.-->
+      - title: Full Professor in Information Engineering
+      institution: University of Modena and Reggio Emilia, Italy
+      year: 2022 - 
+      <!--description:
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.-->
     - title: Visiting Professor
       institution: University of Rijeka, HR
       year: 2020
