--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -30,7 +30,7 @@
 
 - title: Experience
   type: time_table
-  contents:zz
+  contents:
     - title: Full Professor in Information Engineering
       institution: University of Modena and Reggio Emilia, Italy
       year: 2022 - 
